Drop 1.15 support + some improvements (#219)
Drop 1.15 support for future native 1.17.
Replace use of #newInstance deprecated method instanciating traits.
Remove #distance method already implemented in Spigot API.
Optimize imports.