@@ -1,12 +1,12 @@
 package uk.antiperson.stackmob.entity.traits;
 
 import org.bukkit.entity.LivingEntity;
-import org.bukkit.entity.Piglin;
 import uk.antiperson.stackmob.StackMob;
 import uk.antiperson.stackmob.entity.StackEntity;
 import uk.antiperson.stackmob.entity.traits.trait.*;
 import uk.antiperson.stackmob.utils.Utilities;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashSet;
 
 public class TraitManager {
@@ -18,7 +18,7 @@ public class TraitManager {
         this.traits = new HashSet<>();
     }
 
-    public void registerTraits() throws InstantiationException, IllegalAccessException {
+    public void registerTraits() throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
         registerTrait(SheepColor.class);
         registerTrait(SheepShear.class);
         registerTrait(HorseColor.class);
@@ -38,14 +38,11 @@ public class TraitManager {
         registerTrait(Leash.class);
         registerTrait(Potion.class);
         registerTrait(VillagerProfession.class);
+        registerTrait(ZoglinBaby.class);
+        registerTrait(PiglinBaby.class);
         if (Utilities.isPaper()) {
             registerTrait(TurtleHasEgg.class);
         }
-        if (Utilities.isNewBukkit()) {
-            return;
-        }
-        registerTrait(ZoglinBaby.class);
-        registerTrait(PiglinBaby.class);
     }
 
     /**
@@ -55,11 +52,13 @@ public class TraitManager {
      * @param trait class that implements trait
      * @throws IllegalAccessException if class is not accessible
      * @throws InstantiationException if class can not be instantiated
+     * @throws NoSuchMethodException if class constructor can not be found
+     * @throws InvocationTargetException if instanciation fails
      */
-    private void registerTrait(Class<? extends Trait> trait) throws IllegalAccessException, InstantiationException {
-        TraitMetadata traitMetadata = trait.getAnnotation(TraitMetadata.class);
+    private void registerTrait(Class<? extends Trait> trait) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        final TraitMetadata traitMetadata = trait.getAnnotation(TraitMetadata.class);
         if (sm.getMainConfig().isTraitEnabled(traitMetadata.path()) || sm.getMainConfig().getBoolean(traitMetadata.path())) {
-            traits.add(trait.newInstance());
+            traits.add(trait.getDeclaredConstructor().newInstance());
         }
     }
 
